[gd_scene load_steps=8 format=3 uid="uid://ba3npv06uxd32"]

[ext_resource type="Script" path="res://ExitButtonPrompt.gd" id="1_ake3b"]
[ext_resource type="Script" path="res://settings.gd" id="1_mfv3o"]
[ext_resource type="AudioStream" uid="uid://cchel4b1kevov" path="res://sound/music/Desert Mayhem.mp3" id="2_0ds8h"]
[ext_resource type="Script" path="res://VolumeSlider.gd" id="2_fsrym"]
[ext_resource type="Script" path="res://mainMenuMusic.gd" id="3_ou2dt"]
[ext_resource type="AudioStream" uid="uid://bhee00epgkb5" path="res://sound/sfx/UI_SELECT.mp3" id="6_vn3wx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkbln"]
bg_color = Color(0.909804, 0.909804, 0.909804, 1)
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfv3o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="CONTROLS" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CONTROLS"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center] CONTROLS"
fit_content = true

[node name="FullScreen" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 0

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/check_v_offset = 2
theme_override_font_sizes/font_size = 24
button_mask = 0
text = "Full Screen"

[node name="SelectedPanel" type="Panel" parent="VBoxContainer/FullScreen"]
visible = false
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qkbln")

[node name="BackgroundPanel" type="Panel" parent="VBoxContainer/FullScreen"]
z_index = -2
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/FullScreen"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="MasterVolume" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Master Volume"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolume/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
scrollable = false
script = ExtResource("2_fsrym")
busName = "Master"

[node name="SelectedPanel" type="Panel" parent="VBoxContainer/MasterVolume"]
visible = false
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qkbln")

[node name="BackgroundPanel" type="Panel" parent="VBoxContainer/MasterVolume"]
z_index = -2
layout_mode = 2

[node name="SFXVolume" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]SFX Volume"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/SFXVolume/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
scrollable = false
script = ExtResource("2_fsrym")
busName = "SFX"

[node name="SelectedPanel" type="Panel" parent="VBoxContainer/SFXVolume"]
visible = false
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qkbln")

[node name="BackgroundPanel" type="Panel" parent="VBoxContainer/SFXVolume"]
z_index = -2
layout_mode = 2

[node name="MusicVolume" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Music Volume"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolume/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.01
scrollable = false
script = ExtResource("2_fsrym")
busName = "Music"

[node name="SelectedPanel" type="Panel" parent="VBoxContainer/MusicVolume"]
visible = false
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qkbln")

[node name="BackgroundPanel" type="Panel" parent="VBoxContainer/MusicVolume"]
z_index = -2
layout_mode = 2

[node name="ToMenu" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="ExitButtonPrompt" type="RichTextLabel" parent="VBoxContainer/ToMenu"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
fit_content = true
script = ExtResource("1_ake3b")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0ds8h")
bus = &"Music"
script = ExtResource("3_ou2dt")

[node name="UI_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vn3wx")
bus = &"SFX"

[connection signal="finished" from="Music" to="Music" method="_on_finished"]
